--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,17 +1,17 @@
-<div class="box">    
-    <%= link_to (image_tag pin.image (:medium)), pin %>
+<div class="box">
+    <%= link_to (image_tag pin.image(:medium)), pin %>
     <p class="description">
-   	 <%= pin.description %>
-   	</p>
-   	<p>
-   		<strong>
-   			Posted by <%= pin.user.name %>
-   		</strong>
-
-    <% if current_user == pin.user %>
+        <%= pin.description %>
+    </p>
     <p>
-    <%= link_to 'Edit', edit_pin_path(pin) %></td>
-    <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
-    <% end %> 
-</p>
+        <strong>
+            Posted by <%= link_to pin.user.name, pin.user %>
+        </strong>
+    </p>
+    <% if current_user == pin.user %>
+        <p>
+          <%= link_to 'Edit', edit_pin_path(pin) %>
+          <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </p>
+    <% end %>
 </div>
